--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
         <div class="section" id="plan">
                 <h1>Practicing Git</h1>
-                <div class="minileft">
+                <div class="miniright">
                         <div><img src="hammer.gif" /></div>
                         <div><img src="construction.gif" /></div>
                 </div>
