--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 		<p>Ready to learn about version control through git?  You can 
 		<a href="https://openhatch.org/wiki/Open_Source_Comes_to_Campus/Practicing_Git/Students">follow along here</a>.</p>
   
-                <h2>Version control is...</h2>
-
-		<p>... inferior to keeping track of projects through email attachments.</p>
+                <h2>Version control:</h2>
+				
+		<p>-The management of changes to documents, computer programs, large web sites, and other collections of information.</p>
 
                 <h2>Cloning a repository...</h2>
 
