--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<p>Ready to learn about version control through git?  You can 
 		<a href="https://openhatch.org/wiki/Open_Source_Comes_to_Campus/Practicing_Git/Students">follow along here</a>.</p>
   
-                <h2>Version control is...</h2>
+                <h2>Version control is </h2>
 
 		<p>... inferior to keeping track of projects through email attachments.</p>
 
@@ -30,9 +30,9 @@
 
 		<p>... you just said three things that all mean the same thing.</p>
 
-                <h2>You need to fork when...</h2>
+                <h2>You need to fork when ad </h2>
 
-		<p>... you're out of spoons.</p>
+		<p>  you're out of spoons.</p>
 
 
         </div>
@@ -48,18 +48,18 @@
                 <h2>More about open source</h2>
                 <p>Free, open source software is software that is
                 shared freely and available to build upon. It is a
-                adjective way to apply your skills to adjective projects
+                useful way to apply your skills to massive projects
                 and social causes. You can participate by writing or
                 reviewing code, answering users' questions,
-                translating the interface to another noun, making
+                translating the interface to another food making
                 video tutorials to help new users, and myriad other
                 ways. Open source software is often produced by lots
-                of nouns collaborating across noun and noun, and
-                this event specially welcomes nouns to that style
-                of noun.</p>
+                of professionals collaborating across nations and time zones, and
+                this event specially welcomes students to that style
+                of robot.</p>
 
                 <p>Open source participation is one way to gain
-                noun skills and make connections that will last
+                communication skills and make connections that will last
                 you through your career. Volunteer staff will include
                 professionals and academics who use open source
                 daily.</p>
