--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <div class="section" id="plan">
                 <h1>Practicing Git</h1>
                 <div class="minileft">
-                        <div><img src="hammer.gif" /></div>
-                        <div><img src="construction.gif" /></div>
+                        <div><img src="TheProgrammersLife.jpeg" /></div>
+                        
                 </div>
 
 		<p>Ready to learn about version control through git?  You can 
