Added a new pic

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="section" id="plan">
                 <h1>Practicing Git</h1>
                 <div class="minileft">
-                        <div><img src="TheProgrammersLife.jpeg" /></div>
+                        <div><img src="TheProgrammersLife.jpg" /></div>
                         
                 </div>
 
