--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
         <div class="section" id="plan">
                 <h1>Practicing Git</h1>
                 <div class="minileft">
-                        <div><img src="TheProgrammersLife.jpg" /></div>
-                        
+                        <div><img  src="TheProgrammersLife1.jpg" /></div>
                 </div>
 
 		<p>Ready to learn about version control through git?  You can 
